--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
         <label for="recherche">Chercher un pokémon</label>
         <input type="text" id="recherche">
         <button type="submit">Rechercher</button>
+
+        <div class="loader">
+            <div class="point"></div>
+            <div class="point"></div>
+            <div class="point"></div>
+        </div>
     </form>
+
+
 
     <div class="container">
         <ul class="liste-poke">
-            
+
         </ul>
     </div>
     
