--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Bienvenue dans le Pokedex !</h1>
 
     <form class="recherche-poke">
-        <label for="recherche">Chercher un pokémon</label>
+        <label for="recherche">Chercher un pokémon avec son nom</label>
         <input type="text" id="recherche">
         <button type="submit">Rechercher</button>
 
